# principal_components_analysis

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  blocked__pca_8hpp.html  blocked__pca_8hpp_source.html  classes.html  dir_60c7ef18ff8f7a33d9f31b9fa497fbd2.html  dir_bdabb9492db2368b3caf0f4c1df6a160.html  files.html  functions.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacescran.html  namespacescran_1_1blocked__pca.html  namespacescran_1_1simple__pca.html  namespacescran__pca.html  scran_8hpp.html  scran_8hpp_source.html  scran__pca_8hpp.html  scran__pca_8hpp_source.html  scran_pca.tag  scran_principal_component_analysis.tag  simple__pca_8hpp.html  simple__pca_8hpp_source.html  structscran_1_1blocked__pca_1_1Options-members.html  structscran_1_1blocked__pca_1_1Options.html  structscran_1_1blocked__pca_1_1Results-members.html  structscran_1_1blocked__pca_1_1Results.html  structscran_1_1simple__pca_1_1Options-members.html  structscran_1_1simple__pca_1_1Options.html  structscran_1_1simple__pca_1_1Results-members.html  structscran_1_1simple__pca_1_1Results.html  structscran__pca_1_1BlockedPcaOptions-members.html  structscran__pca_1_1BlockedPcaOptions.html  structscran__pca_1_1BlockedPcaResults-members.html  structscran__pca_1_1BlockedPcaResults.html  structscran__pca_1_1SimplePcaOptions-members.html  structscran__pca_1_1SimplePcaOptions.html  (+2 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  files_1.js  files_2.js  files_7.js  files_8.js  files_a.js  files_b.js  files_c.js  files_e.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  (+26 more)
include/scran/: blocked_pca.hpp  pca_utils.hpp  residual_pca.hpp  simple_pca.hpp
include/scran/pca_utils/: TransposedTatamiWrapper.hpp  blocking.hpp  general.hpp
include/scran_pca/: blocked_pca.hpp  simple_pca.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: blocked_pca.cpp  compare_pcs.h  residual_pca.cpp  simple_pca.cpp  utils.h
